src/libqwidget.bf

	[LinkName("QWidget_SetParent")]
	public static extern void QWidget_SetParent(void* c_this, QWidget parent);
	[LinkName("QWidget_SetParent2")]
	public static extern void QWidget_SetParent2(void* c_this, QWidget parent, int64 f);
	[LinkName("QWidget_Scroll")]
	public static extern void QWidget_Scroll(void* c_this, int32 dx, int32 dy);
	[LinkName("QWidget_Scroll2")]
	public static extern void QWidget_Scroll2(void* c_this, int32 dx, int32 dy, QRect param3);
	[LinkName("QWidget_FocusWidget")]
	public static extern QWidget QWidget_FocusWidget(void* c_this);
	[LinkName("QWidget_NextInFocusChain")]
	public static extern QWidget QWidget_NextInFocusChain(void* c_this);
	[LinkName("QWidget_PreviousInFocusChain")]
	public static extern QWidget QWidget_PreviousInFocusChain(void* c_this);
	[LinkName("QWidget_AcceptDrops")]
	public static extern bool QWidget_AcceptDrops(void* c_this);
	[LinkName("QWidget_SetAcceptDrops")]
	public static extern void QWidget_SetAcceptDrops(void* c_this, bool on);
	[LinkName("QWidget_AddAction")]
	public static extern void QWidget_AddAction(void* c_this, QAction action);
	[LinkName("QWidget_AddActions")]
	public static extern void QWidget_AddActions(void* c_this, QAction[] actions);
	[LinkName("QWidget_InsertActions")]
	public static extern void QWidget_InsertActions(void* c_this, QAction before, QAction[] actions);
	[LinkName("QWidget_InsertAction")]
	public static extern void QWidget_InsertAction(void* c_this, QAction before, QAction action);
	[LinkName("QWidget_RemoveAction")]
	public static extern void QWidget_RemoveAction(void* c_this, QAction action);
	[LinkName("QWidget_Actions")]
	public static extern QAction[] QWidget_Actions(void* c_this);
	[LinkName("QWidget_AddActionWithText")]
	public static extern QAction QWidget_AddActionWithText(void* c_this, char8[] text);
	[LinkName("QWidget_AddAction2")]
	public static extern QAction QWidget_AddAction2(void* c_this, QIcon icon, char8[] text);
	[LinkName("QWidget_AddAction3")]
	public static extern QAction QWidget_AddAction3(void* c_this, char8[] text, QKeySequence shortcut);
	[LinkName("QWidget_AddAction4")]
	public static extern QAction QWidget_AddAction4(void* c_this, QIcon icon, char8[] text, QKeySequence shortcut);
	[LinkName("QWidget_ParentWidget")]
	public static extern QWidget QWidget_ParentWidget(void* c_this);
	[LinkName("QWidget_SetWindowFlags")]
	public static extern void QWidget_SetWindowFlags(void* c_this, int64 typeVal);
	[LinkName("QWidget_WindowFlags")]
	public static extern int64 QWidget_WindowFlags(void* c_this);
	[LinkName("QWidget_SetWindowFlag")]
	public static extern void QWidget_SetWindowFlag(void* c_this, int64 param1);
	[LinkName("QWidget_OverrideWindowFlags")]
	public static extern void QWidget_OverrideWindowFlags(void* c_this, int64 typeVal);
	[LinkName("QWidget_WindowType")]
	public static extern int64 QWidget_WindowType(void* c_this);
	[LinkName("QWidget_Find")]
	public static extern QWidget QWidget_Find(uint64 param1);
	[LinkName("QWidget_ChildAt")]
	public static extern QWidget QWidget_ChildAt(void* c_this, int32 x, int32 y);
	[LinkName("QWidget_ChildAtWithQPoint")]
	public static extern QWidget QWidget_ChildAtWithQPoint(void* c_this, QPoint p);
	[LinkName("QWidget_SetAttribute")]
	public static extern void QWidget_SetAttribute(void* c_this, int64 param1);
	[LinkName("QWidget_TestAttribute")]
	public static extern bool QWidget_TestAttribute(void* c_this, int64 param1);
	[LinkName("QWidget_PaintEngine")]
	public static extern QPaintEngine QWidget_PaintEngine(void* c_this);
	[LinkName("QWidget_EnsurePolished")]
	public static extern void QWidget_EnsurePolished(void* c_this);
	[LinkName("QWidget_IsAncestorOf")]
	public static extern bool QWidget_IsAncestorOf(void* c_this, QWidget child);
	[LinkName("QWidget_AutoFillBackground")]
	public static extern bool QWidget_AutoFillBackground(void* c_this);
	[LinkName("QWidget_SetAutoFillBackground")]
	public static extern void QWidget_SetAutoFillBackground(void* c_this, bool enabled);
	[LinkName("QWidget_BackingStore")]
	public static extern QBackingStore QWidget_BackingStore(void* c_this);
	[LinkName("QWidget_WindowHandle")]
	public static extern QWindow QWidget_WindowHandle(void* c_this);
	[LinkName("QWidget_Screen")]
	public static extern QScreen QWidget_Screen(void* c_this);
	[LinkName("QWidget_SetScreen")]
	public static extern void QWidget_SetScreen(void* c_this, QScreen screen);
	[LinkName("QWidget_CreateWindowContainer")]
	public static extern QWidget QWidget_CreateWindowContainer(QWindow window);
	[LinkName("QWidget_WindowTitleChanged")]
	public static extern void QWidget_WindowTitleChanged(void* c_this, char8[] title);
	[LinkName("QWidget_WindowIconChanged")]
	public static extern void QWidget_WindowIconChanged(void* c_this, QIcon icon);
	[LinkName("QWidget_WindowIconTextChanged")]
	public static extern void QWidget_WindowIconTextChanged(void* c_this, char8[] iconText);
	[LinkName("QWidget_CustomContextMenuRequested")]
	public static extern void QWidget_CustomContextMenuRequested(void* c_this, QPoint pos);
	[LinkName("QWidget_Event")]
	public static extern bool QWidget_Event(void* c_this, QEvent event);
	[LinkName("QWidget_MousePressEvent")]
	public static extern void QWidget_MousePressEvent(void* c_this, QMouseEvent event);
	[LinkName("QWidget_MouseReleaseEvent")]
	public static extern void QWidget_MouseReleaseEvent(void* c_this, QMouseEvent event);
	[LinkName("QWidget_MouseDoubleClickEvent")]
	public static extern void QWidget_MouseDoubleClickEvent(void* c_this, QMouseEvent event);
	[LinkName("QWidget_MouseMoveEvent")]
	public static extern void QWidget_MouseMoveEvent(void* c_this, QMouseEvent event);
	[LinkName("QWidget_WheelEvent")]
	public static extern void QWidget_WheelEvent(void* c_this, QWheelEvent event);
	[LinkName("QWidget_KeyPressEvent")]
	public static extern void QWidget_KeyPressEvent(void* c_this, QKeyEvent event);
	[LinkName("QWidget_KeyReleaseEvent")]
	public static extern void QWidget_KeyReleaseEvent(void* c_this, QKeyEvent event);
	[LinkName("QWidget_FocusInEvent")]
	public static extern void QWidget_FocusInEvent(void* c_this, QFocusEvent event);
	[LinkName("QWidget_FocusOutEvent")]
	public static extern void QWidget_FocusOutEvent(void* c_this, QFocusEvent event);
	[LinkName("QWidget_EnterEvent")]
	public static extern void QWidget_EnterEvent(void* c_this, QEnterEvent event);
	[LinkName("QWidget_LeaveEvent")]
	public static extern void QWidget_LeaveEvent(void* c_this, QEvent event);
	[LinkName("QWidget_PaintEvent")]
	public static extern void QWidget_PaintEvent(void* c_this, QPaintEvent event);
	[LinkName("QWidget_MoveEvent")]
	public static extern void QWidget_MoveEvent(void* c_this, QMoveEvent event);
	[LinkName("QWidget_ResizeEvent")]
	public static extern void QWidget_ResizeEvent(void* c_this, QResizeEvent event);
	[LinkName("QWidget_CloseEvent")]
	public static extern void QWidget_CloseEvent(void* c_this, QCloseEvent event);
	[LinkName("QWidget_ContextMenuEvent")]
	public static extern void QWidget_ContextMenuEvent(void* c_this, QContextMenuEvent event);
	[LinkName("QWidget_TabletEvent")]
	public static extern void QWidget_TabletEvent(void* c_this, QTabletEvent event);
	[LinkName("QWidget_ActionEvent")]
	public static extern void QWidget_ActionEvent(void* c_this, QActionEvent event);
	[LinkName("QWidget_DragEnterEvent")]
	public static extern void QWidget_DragEnterEvent(void* c_this, QDragEnterEvent event);
	[LinkName("QWidget_DragMoveEvent")]
	public static extern void QWidget_DragMoveEvent(void* c_this, QDragMoveEvent event);
	[LinkName("QWidget_DragLeaveEvent")]
	public static extern void QWidget_DragLeaveEvent(void* c_this, QDragLeaveEvent event);
	[LinkName("QWidget_DropEvent")]
	public static extern void QWidget_DropEvent(void* c_this, QDropEvent event);
	[LinkName("QWidget_ShowEvent")]
	public static extern void QWidget_ShowEvent(void* c_this, QShowEvent event);
	[LinkName("QWidget_HideEvent")]
	public static extern void QWidget_HideEvent(void* c_this, QHideEvent event);
	[LinkName("QWidget_NativeEvent")]
	public static extern bool QWidget_NativeEvent(void* c_this, uint8[] eventType, void message, c_uintptr result);
	[LinkName("QWidget_ChangeEvent")]
	public static extern void QWidget_ChangeEvent(void* c_this, QEvent param1);
	[LinkName("QWidget_Metric")]
	public static extern int32 QWidget_Metric(void* c_this, int64 param1);
	[LinkName("QWidget_InitPainter")]
	public static extern void QWidget_InitPainter(void* c_this, QPainter painter);
	[LinkName("QWidget_Redirected")]
	public static extern QPaintDevice QWidget_Redirected(void* c_this, QPoint offset);
	[LinkName("QWidget_SharedPainter")]
	public static extern QPainter QWidget_SharedPainter(void* c_this);
	[LinkName("QWidget_InputMethodEvent")]
	public static extern void QWidget_InputMethodEvent(void* c_this, QInputMethodEvent param1);
	[LinkName("QWidget_InputMethodQuery")]
	public static extern QVariant QWidget_InputMethodQuery(void* c_this, int64 param1);
	[LinkName("QWidget_InputMethodHints")]
	public static extern int64 QWidget_InputMethodHints(void* c_this);
	[LinkName("QWidget_SetInputMethodHints")]
	public static extern void QWidget_SetInputMethodHints(void* c_this, int64 hints);
	[LinkName("QWidget_UpdateMicroFocus")]
	public static extern void QWidget_UpdateMicroFocus(void* c_this);
	[LinkName("QWidget_Create")]
	public static extern void QWidget_Create(void* c_this);
	[LinkName("QWidget_Destroy")]
	public static extern void QWidget_Destroy(void* c_this);
	[LinkName("QWidget_FocusNextPrevChild")]
	public static extern bool QWidget_FocusNextPrevChild(void* c_this, bool next);
	[LinkName("QWidget_FocusNextChild")]
	public static extern bool QWidget_FocusNextChild(void* c_this);
	[LinkName("QWidget_FocusPreviousChild")]
	public static extern bool QWidget_FocusPreviousChild(void* c_this);
	[LinkName("QWidget_Tr2")]
	public static extern char8[] QWidget_Tr2(char8[] s, char8[] c);
	[LinkName("QWidget_Tr3")]
	public static extern char8[] QWidget_Tr3(char8[] s, char8[] c, int32 n);
	[LinkName("QWidget_Render2")]
	public static extern void QWidget_Render2(void* c_this, QPaintDevice target, QPoint targetOffset);
	[LinkName("QWidget_Render3")]
	public static extern void QWidget_Render3(void* c_this, QPaintDevice target, QPoint targetOffset, QRegion sourceRegion);
	[LinkName("QWidget_Render4")]
	public static extern void QWidget_Render4(void* c_this, QPaintDevice target, QPoint targetOffset, QRegion sourceRegion, int64 renderFlags);
	[LinkName("QWidget_Render22")]
	public static extern void QWidget_Render22(void* c_this, QPainter painter, QPoint targetOffset);
	[LinkName("QWidget_Render32")]
	public static extern void QWidget_Render32(void* c_this, QPainter painter, QPoint targetOffset, QRegion sourceRegion);
	[LinkName("QWidget_Render42")]
	public static extern void QWidget_Render42(void* c_this, QPainter painter, QPoint targetOffset, QRegion sourceRegion, int64 renderFlags);
	[LinkName("QWidget_Grab1")]
	public static extern QPixmap QWidget_Grab1(void* c_this, QRect rectangle);
	[LinkName("QWidget_GrabGesture2")]
	public static extern void QWidget_GrabGesture2(void* c_this, int64 typeVal, int64 flags);
	[LinkName("QWidget_GrabShortcut2")]
	public static extern int32 QWidget_GrabShortcut2(void* c_this, QKeySequence key, int64 context);
	[LinkName("QWidget_SetShortcutEnabled2")]
	public static extern void QWidget_SetShortcutEnabled2(void* c_this, int32 id, bool enable);
	[LinkName("QWidget_SetShortcutAutoRepeat2")]
	public static extern void QWidget_SetShortcutAutoRepeat2(void* c_this, int32 id, bool enable);
	[LinkName("QWidget_SetWindowFlag2")]
	public static extern void QWidget_SetWindowFlag2(void* c_this, int64 param1, bool on);
	[LinkName("QWidget_SetAttribute2")]
	public static extern void QWidget_SetAttribute2(void* c_this, int64 param1, bool on);
	[LinkName("QWidget_CreateWindowContainer2")]
	public static extern QWidget QWidget_CreateWindowContainer2(QWindow window, QWidget parent);
